* Makefile.in (all-zlib): Added dummy target.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36206 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/Makefile.in
+++ b/Makefile.in
@@ -1651,6 +1651,7 @@ all-target-winsup: all-target-newlib all-target-libiberty all-target-libtermcap 
 configure-target-winsup: configure-target-newlib
 all-uudecode: all-libiberty
 all-zip:
+all-zlib:
 configure-target-zlib: $(ALL_GCC)
 all-target-zlib: configure-target-zlib
 configure-target-libiberty: $(ALL_GCC) configure-target-newlib
