* configure.in (multilib): Enable by default only for target. * configure: Rebuilt.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36207 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/zlib/configure.in
+++ b/zlib/configure.in
@@ -22,7 +22,7 @@ AC_ARG_ENABLE(multilib,
   yes) multilib=yes ;;
   no)  multilib=no ;;
   *)   AC_MSG_ERROR(bad value ${enableval} for multilib option) ;;
- esac], [multilib=yes])dnl
+ esac], [test -z "$with_target_subdir" && multilib=no || multilib=yes])dnl
 
 dnl We may get other options which we dont document:
 dnl --with-target-subdir, --with-multisrctop, --with-multisubdir
