* Makefile.in (clean_s1): Depend on stage_b. (clean_s2): Depend on stage_d. Don't remove $(VOL_FILES) in stage2. They are used for "make compare".
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36223 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/Makefile.in
+++ b/gcc/Makefile.in
@@ -2794,13 +2794,12 @@ stage_f: stage_e
 	touch stage_f
 
 # Additional steps for *-lean targets:
-clean_s1:
+clean_s1: stage_b
 	-cd stage1; rm -f $(VOL_FILES)
 	touch clean_s1
 
-clean_s2:
+clean_s2: stage_d
 	-rm -rf stage1
-	-cd stage2; rm -f $(VOL_FILES)
 	touch clean_s2
 
 # This next little bit is the way it is for parallel builds.  It's simply
