* configure.in (sh-*-linux*): Added. * configure: Rebuilt. * config/sh/t-linux: New file. * config/sh/sh.h (USERMODE_BIT): Define. (TARGET_USERMODE): Likewise. (TARGET_SWITCHES): New switches for the bits above. (INITIALIZE_TRAMPOLINE): Call __ic_invalidate in USERMODE. * config/sh/linux.h: New file. * config/sh/lib1funcs.asm (GLOBAL): Don't prefix symbols with underscore on linux. (L_sdivsi3, L_udivsi3): Define for linux. (L_ic_invalidate): Define. * invoke.texi (SH Options): Document -musermode.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36227 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -3358,6 +3358,16 @@ changequote([,])dnl
 		tm_file="sh/sh.h sh/rtems.h"
 		float_format=sh
 		;;
+	sh-*-linux*)
+		tm_file="sh/sh.h sh/elf.h sh/linux.h"
+		tmake_file="sh/t-sh sh/t-elf sh/t-linux"
+		xmake_file=x-linux
+		gas=yes gnu_ld=yes
+ 		if test x$enable_threads = xyes; then
+ 			thread_file='posix'
+ 		fi
+		float_format=sh
+		;;
 	sh-*-*)
 		float_format=sh
 		;;
