--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -2047,6 +2047,23 @@ changequote([,])dnl
 	m32r-*-elf*)
 		extra_parts="crtinit.o crtfini.o"
 		;;
+	# m68hc11 and m68hc12 share the same machine description.
+        m68hc11-*-*|m6811-*-*)
+		tm_file="m68hc11/m68hc11.h"
+                xm_file="m68hc11/xm-m68hc11.h"
+		tm_p_file="m68hc11/m68hc11-protos.h"
+		md_file="m68hc11/m68hc11.md"
+		out_file="m68hc11/m68hc11.c"
+		tmake_file="m68hc11/t-m68hc11-gas"
+                ;;
+        m68hc12-*-*|m6812-*-*)
+		tm_file="m68hc11/m68hc12.h"
+		tm_p_file="m68hc11/m68hc11-protos.h"
+                xm_file="m68hc11/xm-m68hc11.h"
+		md_file="m68hc11/m68hc11.md"
+		out_file="m68hc11/m68hc11.c"
+		tmake_file="m68hc11/t-m68hc11-gas"
+                ;;
 	m68000-convergent-sysv*)
 		tm_file=m68k/ctix.h
 		xm_file="m68k/xm-3b1.h ${xm_file}"
