--- a/libffi/Makefile.in
+++ b/libffi/Makefile.in
@@ -226,8 +226,7 @@ LINK = $(LIBTOOL) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) $(AM_LDFLAGS) $(LDF
 DIST_SOURCES =  $(libffi_la_SOURCES) $(ffitest_SOURCES)
 depcomp = 
 DIST_COMMON =  README ./stamp-h.in ChangeLog Makefile.am Makefile.in \
-acconfig.h aclocal.m4 config.guess config.sub configure configure.in \
-fficonfig.h.in install-sh ltconfig ltmain.sh missing mkinstalldirs
+acconfig.h acinclude.m4 aclocal.m4 configure configure.in fficonfig.h.in
 
 
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
