--- a/libjava/libltdl/config.h.in
+++ b/libjava/libltdl/config.h.in
@@ -9,15 +9,6 @@
 /* Define if you have the ANSI C header files.  */
 #undef STDC_HEADERS
 
-/* Define if you have the libdl library or equivalent.  */
-#undef HAVE_LIBDL
-
-/* Define if you have the GNU dld library.  */
-#undef HAVE_DLD
-
-/* Define if you have the shl_load function.  */
-#undef HAVE_SHL_LOAD
-
 /* Define if you are using the Boehm GC.  */
 #undef HAVE_BOEHM_GC
 
@@ -32,6 +23,9 @@
 
 /* Define if you have the strchr function.  */
 #undef HAVE_STRCHR
+
+/* Define if you have the strcmp function.  */
+#undef HAVE_STRCMP
 
 /* Define if you have the strrchr function.  */
 #undef HAVE_STRRCHR
@@ -72,11 +66,32 @@
 /* Define to the name of the environment variable that determines the dynamic library search path.  */
 #undef LTDL_SHLIBPATH_VAR
 
+/* Define to the system default library search path.  */
+#undef LTDL_SYSSEARCHPATH
+
 /* Define to the sub-directory in which libtool stores uninstalled libraries.  */
 #undef LTDL_OBJDIR
 
 /* Define if libtool can extract symbol lists from object files.  */
 #undef HAVE_PRELOADED_SYMBOLS
+
+/* Define if you have the libdl library or equivalent.  */
+#undef HAVE_LIBDL
+
+/* Define if you have the libdl library or equivalent. */
+#undef HAVE_LIBDL
+
+/* Define if you have the libdl library or equivalent. */
+#undef HAVE_LIBDL
+
+/* Define if you have the shl_load function. */
+#undef HAVE_SHL_LOAD
+
+/* Define if you have the shl_load function. */
+#undef HAVE_SHL_LOAD
+
+/* Define if you have the GNU dld library. */
+#undef HAVE_DLD
 
 /* Define if dlsym() requires a leading underscode in symbol names.  */
 #undef NEED_USCORE
