* c-common.h (add_stmt): Change prototype. 	(RECHAIN_STMTS): New macro. 	(CASE_LABEL_DECL): Likewise. 	(genrtl_case_label): Change prototype. 	(c_expand_start_case): Remove prototype. 	(build_case_label): Change prototype. 	(decl_constant_value): Declare. 	* c-common.c (check_case_value): Handle C++'s extensions to C 	semantics. 	* c-commnon.def (CASE_LABEL): Add room for the CASE_LABEL_DECL 	field. 	* c-parse.in (stmt): Adjust handling of return statements and case 	laels. 	* c-semantics.c (add_stmt): Return the new statement. 	(genrtl_return_stmt): Take the RETURN_STMT as input, not the 	returned expression.  Directly generate RTL, rather than calling 	c_expand_return. 	(genrtl_switch_stmt): Don't call c_expand_start_case. 	(build_case_label): Take the LABEL_DECL as input, too. 	(genrtl_case_label): Just call add_case_node. 	(expand_stmt): Adjust calls to genrtl_return_stmt and 	genrtl_case_label. 	* c-tree.h (c_expand_start_case): Declare. 	* c-typeck.c (decl_constant_value): Give it external linkage. 	(c_expand_return): Don't call expand_return or expand_null_return; 	use genrtl_return_stmt instead. 	* stmt.c (struct nesting): Remove num_ranges field. 	(add_case_node): Give it external linkage. 	(expand_start_case): Don't set num_ranges. 	(expand_start_case_dummy): Don't clear it. 	(pushcase): Rely on add_case_node to handle `default' labels. 	(add_case_node): Handle `default' labels. 	* tree.c (tree_int_cst_compare): New function. 	* tree.h (tree_int_cst_compare): Declare. 	(add_case_node): Likewise.
	* cp-tree.h (push_switch): Change prototype.
	(check_cp_case_value): Remove declaration.
	(decl_constant_value): Likewise.
	* decl.c (struct cp_switch): Add switch_stmt and cases.
	(case_compare): New function.
	(push_switch): Set switch_stmt.  Initialize cases.
	(pop_switch): Clean up cases.
	(define_case_label): Rename to ...
	(finish_case_label): ... this.  Do semantic analysis for case
	labels here.
	(start_function): Correct comment.
	* decl2.c (check_cp_case

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -1879,13 +1879,11 @@ stmt:
                   stmt_count++;
 		  genrtl_continue_stmt (); }
 	| RETURN ';'
-                { tree return_stmt = build_return_stmt (NULL_TREE);
-                  stmt_count++;
-		  genrtl_return_stmt (RETURN_EXPR(return_stmt)); }
+                { stmt_count++;
+		  c_expand_return (NULL_TREE); }
 	| RETURN expr ';'
-                { tree return_stmt = build_return_stmt ($2);
-                  stmt_count++;
-		  genrtl_return_stmt (RETURN_EXPR(return_stmt)); }
+                { stmt_count++;
+		  c_expand_return ($2); }
 	| ASM_KEYWORD maybe_type_qual '(' expr ')' ';'
 		{ stmt_count++;
 		  emit_line_note ($<filename>-1, $<lineno>0);
@@ -1943,20 +1941,14 @@ stmt:
    also at the end of a compound statement.  */
 
 label:	  CASE expr_no_commas ':'
-                { tree case_label_tree = build_case_label ($2, NULL_TREE);
-		  stmt_count++;
-		  genrtl_case_label(CASE_LOW(case_label_tree), CASE_HIGH(case_label_tree));
-		}
+                { stmt_count++;
+		  do_case ($2, NULL_TREE); }
 	| CASE expr_no_commas ELLIPSIS expr_no_commas ':'
-                { tree case_label_tree = build_case_label ($2, $4);
-		  stmt_count++;
-		  genrtl_case_label(CASE_LOW(case_label_tree), CASE_HIGH(case_label_tree));
-		}
+                { stmt_count++;
+		  do_case ($2, $4); }
 	| DEFAULT ':'
-                { tree case_label_tree = build_case_label (NULL_TREE, NULL_TREE);
-		  stmt_count++;
-		  genrtl_case_label(CASE_LOW(case_label_tree), CASE_HIGH(case_label_tree));
-		}
+                { stmt_count++;
+		  do_case (NULL_TREE, NULL_TREE); }
 	| identifier save_filename save_lineno ':' maybe_attribute
 		{ tree label = define_label ($2, $3, $1);
 		  stmt_count++;
