* gnu/gcj/convert/BytesToUnicode.java (getDefaultDecoder): Let 	default decoder use iconv. 	* gnu/gcj/convert/UnicodeToBytes.java (getDefaultEncoder): 	Let default encoder use iconv. 	* configure: Rebuilt. 	* configure.in: Check for nl_langinfo and <langinfo.h>. 	* java/lang/natSystem.cc (file_encoding): New function. 	(DEFAULT_FILE_ENCODING): Define to file_encoding() if possible.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36306 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/include/config.h.in
+++ b/libjava/include/config.h.in
@@ -230,6 +230,9 @@
 /* Define if you have the mkdir function.  */
 #undef HAVE_MKDIR
 
+/* Define if you have the nl_langinfo function.  */
+#undef HAVE_NL_LANGINFO
+
 /* Define if you have the open function.  */
 #undef HAVE_OPEN
 
@@ -298,6 +301,9 @@
 
 /* Define if you have the <inttypes.h> header file.  */
 #undef HAVE_INTTYPES_H
+
+/* Define if you have the <langinfo.h> header file.  */
+#undef HAVE_LANGINFO_H
 
 /* Define if you have the <netdb.h> header file.  */
 #undef HAVE_NETDB_H
