2000-09-12  Philipp Thomas  <pthomas@suse.de>
	* Makefile.in.in (stamp-check-pot): New target used for
	checking POTFILES.
	* gcc.pot: Regenerated.
	* cat-tbl-id.c: Likewise.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36346 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/po/Makefile.in.in
+++ b/gcc/po/Makefile.in.in
@@ -79,8 +79,11 @@ INSTOBJEXT = @INSTOBJEXT@
 
 all: all-@USE_NLS@
 
-all-yes: $(CATALOGS) @MAINT@ $(srcdir)/cat-id-tbl.c 
+all-yes: stamp-check-pot $(CATALOGS) @MAINT@ $(srcdir)/cat-id-tbl.c 
 all-no:
+
+stamp-check-pot: $(POTFILES)
+	touch $@
 
 $(srcdir)/$(PACKAGE).pot: $(POTFILES)
 	$(XGETTEXT) --default-domain=$(PACKAGE) --directory=$(top_srcdir) \
@@ -187,7 +190,7 @@ dvi info tags TAGS ID:
 
 mostlyclean:
 	rm -f core core.* *.pox $(PACKAGE).po *.old.po cat-id-tbl.tmp
-	rm -fr *.o
+	rm -fr *.o stamp-check-pot
 
 clean: mostlyclean
 
