--- a/gcc/po/Makefile.in.in
+++ b/gcc/po/Makefile.in.in
@@ -83,7 +83,7 @@ all-yes: stamp-check-pot $(CATALOGS) @MAINT@ $(srcdir)/cat-id-tbl.c
 all-no:
 
 stamp-check-pot: $(POTFILES)
-	touch $@
+	touch stamp-check-pot
 
 $(srcdir)/$(PACKAGE).pot: $(POTFILES)
 	$(XGETTEXT) --default-domain=$(PACKAGE) --directory=$(top_srcdir) \
