* ChangeLog.0, ChangeLog.1, ChangeLog.2, ChangeLog.3, ChangeLog.4, 	ChangeLog.5, ChangeLog, FSFChangeLog.10, FSFChangeLog.11, 	c-common.c, c-common.h, c-parse.in, c-typeck.c, cfg.c, config.gcc, 	configure, configure.in, except.c, except.h, flow.c, function.c, 	gcc.c, gcse.c, genrecog.c, libgcc2.c, loop.c, loop.h, params.def, 	predict.def, predict.h, reg-stack.c, regmove.c, sched-deps.c, 	sched-int.h, sibcall.c, ssa.c, stringpool.c, toplev.c, tree.c, 	unroll.c: Fix spelling errors.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46595 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-parse.in
+++ b/gcc/c-parse.in
@@ -2256,7 +2256,7 @@ lineno_stmt:
 		      /* ??? We currently have no way of recording
 			 the filename for a statement.  This probably
 			 matters little in practice at the moment,
-			 but I suspect that problems will ocurr when
+			 but I suspect that problems will occur when
 			 doing inlining at the tree level.  */
 		    }
 		}
