--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -2030,7 +2030,7 @@ changequote(<<, >>)dnl
 #  -e 's|^\$(prefix)||'   matches and eliminates 'prefix' from 'exec_prefix'
 #  -e 's|/$||'            match a trailing forward slash and eliminates it
 #  -e 's|^[^/]|/|'        forces the string to start with a forward slash (*)
-#  -e 's|/[^/]*|../|g'    replaces each occurance of /<directory> with ../
+#  -e 's|/[^/]*|../|g'    replaces each occurrence of /<directory> with ../
 #
 # (*) Note this pattern overwrites the first character of the string
 # with a forward slash if one is not already present.  This is not a
