--- a/gcc/configure.in
+++ b/gcc/configure.in
@@ -1382,9 +1382,9 @@ EOF
 		# arbitrary sections are supported and try the test.
 		as_ver=`$gcc_cv_as --version 2>/dev/null | head -1`
 		if echo "$as_ver" | grep GNU > /dev/null; then
-			as_ver=`echo $as_ver | sed -e 's/.* //'`
-			as_major=`echo $as_ver | sed 's/\..*//'`
 changequote(,)dnl
+			as_ver=`echo $as_ver | sed -e 's/.* \([0-9.][0-9.]*\) .*/\1/'`
+			as_major=`echo $as_ver | sed 's/\..*//'`
 			as_minor=`echo $as_ver | sed 's/[^.]*\.\([0-9]*\).*/\1/'`
 changequote([,])dnl
 			if test $as_major -eq 2 -a $as_minor -lt 11; then
