--- a/gcc/cp/Make-lang.in
+++ b/gcc/cp/Make-lang.in
@@ -66,7 +66,7 @@ g++spec.o: $(srcdir)/cp/g++spec.c $(SYSTEM_H) $(GCC_H) $(CONFIG_H)
 	$(CC) -c $(ALL_CFLAGS) $(ALL_CPPFLAGS) $(DRIVER_DEFINES) \
 		$(INCLUDES) $(srcdir)/cp/g++spec.c)
 
-$(INTL_TARGETS): $(srcdir)/cp/parse.c
+po-generated: $(srcdir)/cp/parse.c
 
 # Create the compiler driver for g++.
 GXX_OBJS = gcc.o g++spec.o intl.o prefix.o version.o 
